<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">


    <ImageView
        android:id="@+id/imageViewList"
        android:layout_width="@dimen/list_img_width"
        android:layout_height="@dimen/list_img_height"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/activity_margin"
        android:adjustViewBounds="true"
        android:scaleType="centerInside" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_details"
        android:layout_marginTop="@dimen/margin_details"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/price"
            android:layout_alignBottom="@+id/price"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:fontFamily="sans-serif-small"
            android:padding="@dimen/lable_padding"
            android:text="@string/price_label"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/price_top_margin"
            android:layout_toEndOf="@+id/priceLabel"
            android:layout_toRightOf="@+id/priceLabel"
            android:layout_weight="1"
            android:fontFamily="sans-serif-small"
            android:padding="@dimen/lable_padding"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/quantity"
            android:layout_alignBottom="@+id/quantity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:fontFamily="sans-serif-small"
            android:padding="@dimen/lable_padding"
            android:text="@string/quantity_label"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceLabel"
            android:layout_toEndOf="@+id/quantityLabel"
            android:layout_toRightOf="@+id/quantityLabel"
            android:layout_weight="1"
            android:fontFamily="sans-serif-small"
            android:padding="@dimen/lable_padding"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <ImageButton
            android:id="@+id/btnSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/sell_button"
            android:text="@string/btn_sell" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/priceLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/lable_padding"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />
    </RelativeLayout>
</LinearLayout>